--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-6.79MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20110, type: trojan, password: 09553aee-5191-4870-a312-51d053ea668b, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-3.29MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-574.8KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
+  - {name: 🇺🇸 美国-1.08MB/s(Youtube:不良林), server: 38.68.135.18, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
   - {name: 🇺🇸 美国-6.22MB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.10MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.93MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.96MB/s(Youtube:不良林), server: 116.129.254.177, port: 65063, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇭🇰 香港-3.19MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇯🇵 日本-1.37MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-2.57MB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.17MB/s(Youtube:不良林), server: 38.68.135.18, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.79MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-574.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-6.22MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.37MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-6.79MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-574.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-6.22MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.37MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.79MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-574.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-6.22MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.37MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
@@ -66,17 +66,19 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-3.29MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-6.79MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-574.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-6.22MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.37MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
@@ -87,11 +89,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.79MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-574.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-6.22MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.37MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
@@ -103,11 +105,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-6.79MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-574.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-6.22MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.37MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
@@ -128,11 +130,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-6.79MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-574.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-6.22MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.37MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
