--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 香港-3.29MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-574.8KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
-  - {name: 🇺🇸 美国-1.08MB/s(Youtube:不良林), server: 38.68.135.18, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇺🇸 美国-6.22MB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-3.19MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-1.37MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-2.57MB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.17MB/s(Youtube:不良林), server: 38.68.135.18, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-420.9KB/s(Youtube:不良林), server: v3.tgfaka.com, port: 8443, type: vmess, uuid: 00b19c02-bc00-440a-a397-faf70ac3f44e, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v3.tgfaka.com}}
+  - {name: 🇨🇳 中国-207.3KB/s(Youtube:不良林), server: 36.134.156.5, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
   - {name: 🇯🇵 日本-1.66MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.93MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.06MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-6.22MB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-788.9KB/s(Youtube:不良林), server: 203.138.98.199, port: 28000, type: trojan, password: 7da84a56-a1e2-48f3-a690-374a3973d7e8, skip-cert-verify: true}
+  - {name: 波兰-678.0KB/s(Youtube:不良林), server: 217.30.10.67, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
+  - {name: 波兰-537.9KB/s(Youtube:不良林), server: 217.30.10.67, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
+  - {name: 🇸🇬 新加坡-501.8KB/s(Youtube:不良林), server: trojan3.udpgw.com, port: 443, type: trojan, password: 8db1b560-019d-11ed-8bdf-1239d0255272, sni: trojan3.udpgw.com, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-3.88MB/s(Youtube:不良林), server: hinet.52147.top, port: 28000, type: trojan, password: 7da84a56-a1e2-48f3-a690-374a3973d7e8, sni: hinet.52147.top, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-3.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-574.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.22MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-420.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-207.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-788.9KB/s(Youtube:不良林)
+      - 波兰-678.0KB/s(Youtube:不良林)
+      - 波兰-537.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-501.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.88MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 香港-3.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-574.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.22MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-420.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-207.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-788.9KB/s(Youtube:不良林)
+      - 波兰-678.0KB/s(Youtube:不良林)
+      - 波兰-537.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-501.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.88MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-3.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-574.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.22MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-420.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-207.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-788.9KB/s(Youtube:不良林)
+      - 波兰-678.0KB/s(Youtube:不良林)
+      - 波兰-537.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-501.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.88MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-3.29MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.88MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 香港-3.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-574.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.22MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-420.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-207.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-788.9KB/s(Youtube:不良林)
+      - 波兰-678.0KB/s(Youtube:不良林)
+      - 波兰-537.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-501.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.88MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 香港-3.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-574.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.22MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-420.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-207.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-788.9KB/s(Youtube:不良林)
+      - 波兰-678.0KB/s(Youtube:不良林)
+      - 波兰-537.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-501.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.88MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-3.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-574.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.22MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-420.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-207.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-788.9KB/s(Youtube:不良林)
+      - 波兰-678.0KB/s(Youtube:不良林)
+      - 波兰-537.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-501.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.88MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-3.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-574.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.22MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-420.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-207.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-788.9KB/s(Youtube:不良林)
+      - 波兰-678.0KB/s(Youtube:不良林)
+      - 波兰-537.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-501.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.88MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
