--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,67 +5,68 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-207.3KB/s(Youtube:不良林), server: 36.134.156.5, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
-  - {name: 🇯🇵 日本-1.66MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.93MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.06MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-6.22MB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-788.9KB/s(Youtube:不良林), server: 203.138.98.199, port: 28000, type: trojan, password: 7da84a56-a1e2-48f3-a690-374a3973d7e8, skip-cert-verify: true}
-  - {name: 波兰-678.0KB/s(Youtube:不良林), server: 217.30.10.67, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
-  - {name: 波兰-537.9KB/s(Youtube:不良林), server: 217.30.10.67, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
+  - {name: 🇨🇳 中国-1.02MB/s(Youtube:不良林), server: 36.134.156.5, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
+  - {name: 🇨🇳 中国-461.2KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇭🇰 香港-21.03MB/s(Youtube:不良林), server: krhqecxyye.eastasia.cloudapp.azure.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: krhqecxyye.eastasia.cloudapp.azure.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.36MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30010, type: trojan, password: 7da84a56-a1e2-48f3-a690-374a3973d7e8, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-442.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-501.8KB/s(Youtube:不良林), server: trojan3.udpgw.com, port: 443, type: trojan, password: 8db1b560-019d-11ed-8bdf-1239d0255272, sni: trojan3.udpgw.com, skip-cert-verify: true}
   - {name: 🇨🇳 台湾-3.88MB/s(Youtube:不良林), server: hinet.52147.top, port: 28000, type: trojan, password: 7da84a56-a1e2-48f3-a690-374a3973d7e8, sni: hinet.52147.top, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.50MB/s(Youtube:不良林), server: 104.166.135.10, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 104.166.135.10}}
+  - {name: 🇺🇸 美国-3.80MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-7.09MB/s(Youtube:不良林), server: node.sin.entrance.cyou, port: 28000, type: trojan, password: 7da84a56-a1e2-48f3-a690-374a3973d7e8, sni: node.sin.entrance.cyou, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-207.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.22MB/s(Youtube:不良林)
-      - 🇯🇵 日本-788.9KB/s(Youtube:不良林)
-      - 波兰-678.0KB/s(Youtube:不良林)
-      - 波兰-537.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-461.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-21.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-442.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-501.8KB/s(Youtube:不良林)
       - 🇨🇳 台湾-3.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-7.09MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-207.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.22MB/s(Youtube:不良林)
-      - 🇯🇵 日本-788.9KB/s(Youtube:不良林)
-      - 波兰-678.0KB/s(Youtube:不良林)
-      - 波兰-537.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-461.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-21.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-442.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-501.8KB/s(Youtube:不良林)
       - 🇨🇳 台湾-3.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-7.09MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-207.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.22MB/s(Youtube:不良林)
-      - 🇯🇵 日本-788.9KB/s(Youtube:不良林)
-      - 波兰-678.0KB/s(Youtube:不良林)
-      - 波兰-537.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-461.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-21.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-442.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-501.8KB/s(Youtube:不良林)
       - 🇨🇳 台湾-3.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-7.09MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-21.03MB/s(Youtube:不良林)
       - 🇨🇳 台湾-3.88MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
@@ -73,47 +74,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-207.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.22MB/s(Youtube:不良林)
-      - 🇯🇵 日本-788.9KB/s(Youtube:不良林)
-      - 波兰-678.0KB/s(Youtube:不良林)
-      - 波兰-537.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-461.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-21.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-442.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-501.8KB/s(Youtube:不良林)
       - 🇨🇳 台湾-3.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-7.09MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-207.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.22MB/s(Youtube:不良林)
-      - 🇯🇵 日本-788.9KB/s(Youtube:不良林)
-      - 波兰-678.0KB/s(Youtube:不良林)
-      - 波兰-537.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-461.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-21.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-442.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-501.8KB/s(Youtube:不良林)
       - 🇨🇳 台湾-3.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-7.09MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-207.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.22MB/s(Youtube:不良林)
-      - 🇯🇵 日本-788.9KB/s(Youtube:不良林)
-      - 波兰-678.0KB/s(Youtube:不良林)
-      - 波兰-537.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-461.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-21.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-442.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-501.8KB/s(Youtube:不良林)
       - 🇨🇳 台湾-3.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-7.09MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-207.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.22MB/s(Youtube:不良林)
-      - 🇯🇵 日本-788.9KB/s(Youtube:不良林)
-      - 波兰-678.0KB/s(Youtube:不良林)
-      - 波兰-537.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-461.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-21.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-442.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-501.8KB/s(Youtube:不良林)
       - 🇨🇳 台湾-3.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-7.09MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
