--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,10 +6,10 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇨🇳 中国-1.02MB/s(Youtube:不良林), server: 36.134.156.5, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
-  - {name: 🇨🇳 中国-461.2KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇭🇰 香港-21.03MB/s(Youtube:不良林), server: krhqecxyye.eastasia.cloudapp.azure.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: krhqecxyye.eastasia.cloudapp.azure.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.36MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30010, type: trojan, password: 7da84a56-a1e2-48f3-a690-374a3973d7e8, sni: gzyd2.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-442.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.93MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 波兰-537.9KB/s(Youtube:不良林), server: 217.30.10.67, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
+  - {name: 🇨🇳 中国-512.8KB/s(Youtube:不良林), server: 36.134.154.119, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
+  - {name: 🇨🇳 中国-3.20MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30080, type: trojan, password: 7da84a56-a1e2-48f3-a690-374a3973d7e8, sni: gzyd1.52147.top, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-501.8KB/s(Youtube:不良林), server: trojan3.udpgw.com, port: 443, type: trojan, password: 8db1b560-019d-11ed-8bdf-1239d0255272, sni: trojan3.udpgw.com, skip-cert-verify: true}
   - {name: 🇨🇳 台湾-3.88MB/s(Youtube:不良林), server: hinet.52147.top, port: 28000, type: trojan, password: 7da84a56-a1e2-48f3-a690-374a3973d7e8, sni: hinet.52147.top, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.50MB/s(Youtube:不良林), server: 104.166.135.10, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 104.166.135.10}}
@@ -22,10 +22,10 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-461.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-21.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-442.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
+      - 波兰-537.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-512.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-501.8KB/s(Youtube:不良林)
       - 🇨🇳 台湾-3.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
@@ -37,10 +37,10 @@ proxy-groups:
     interval: 300
     proxies:
       - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-461.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-21.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-442.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
+      - 波兰-537.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-512.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-501.8KB/s(Youtube:不良林)
       - 🇨🇳 台湾-3.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
@@ -53,10 +53,10 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-461.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-21.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-442.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
+      - 波兰-537.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-512.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-501.8KB/s(Youtube:不良林)
       - 🇨🇳 台湾-3.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
@@ -66,7 +66,6 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-21.03MB/s(Youtube:不良林)
       - 🇨🇳 台湾-3.88MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
@@ -75,10 +74,10 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-461.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-21.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-442.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
+      - 波兰-537.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-512.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-501.8KB/s(Youtube:不良林)
       - 🇨🇳 台湾-3.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
@@ -90,10 +89,10 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-461.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-21.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-442.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
+      - 波兰-537.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-512.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-501.8KB/s(Youtube:不良林)
       - 🇨🇳 台湾-3.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
@@ -106,10 +105,10 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-461.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-21.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-442.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
+      - 波兰-537.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-512.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-501.8KB/s(Youtube:不良林)
       - 🇨🇳 台湾-3.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
@@ -131,10 +130,10 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-461.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-21.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-442.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
+      - 波兰-537.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-512.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-501.8KB/s(Youtube:不良林)
       - 🇨🇳 台湾-3.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
